BUGFIX: Show horizontal scrollbar in collection tree

--- a/Resources/Private/JavaScript/asset-collections/src/components/AssetCollectionTree.module.css
+++ b/Resources/Private/JavaScript/asset-collections/src/components/AssetCollectionTree.module.css
@@ -1,7 +1,8 @@
 .assetCollectionTree {
     border: 1px solid var(--theme-colors-border);
     max-height: 600px;
-    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .assetCollectionTree > * {
